--- a/survey.html
+++ b/survey.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Survey - Provide feedback to Mariam Mhando on cybersecurity trends">
     <meta name="keywords" content="survey, feedback, cybersecurity, trends">
     <meta name="author" content="Mariam Mhando">
-    <title>Survey | Mariam Mhando</title>
+    <title> Mariam Mhando</title>
     <link rel="stylesheet" href="css/style.css">
    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
