--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
                     <p>University of Dodoma, Tanzania</p>
                 </div>
                 <div class="map-container">
-                    <iframe src="https://www.google.com/maps/place/University+of+Dodoma,+Kikuyu+Avenue,+Dodoma/@-6.204186,35.7971085,17z/data=!4m6!3m5!1s0x184dfb7c31c16937:0x55d63436f01ce0df!8m2!3d-6.2042256!4d35.7977164!16s%2Fm%2F02vqglv?utm_campaign=ml-sul&g_ep=Eg1tbF8yMDI1MDUxMl8wIJvbDyoASAJQAg%3D%3D" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="University of Dodoma Map"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.4499796517334!2d35.79514147355407!3d-6.204220260772906!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x184dfb7c31c16937%3A0x55d63436f01ce0df!2sUniversity%20of%20Dodoma!5e0!3m2!1sen!2stz!4v1747330528136!5m2!1sen!2stz" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </section>
