--- a/portfolio.html
+++ b/portfolio.html
@@ -207,7 +207,7 @@
                     <p>Watch a demonstration of my project about email scams detection</p>
                 </div>
                 <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=Tv5U3D2wrJA" title="Project Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Tv5U3D2wrJA?si=bYpiQDY7b0BTOuzz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
